tests/invalid/assignments.nim
var i = 1
i = i + 1
